# sbsc

./: .gitmodules  CMakeLists.txt  evolution of social networks.docx  murray-goldstone-scholarship.docx  readme.md
analysis/: initdeg12_ints_cascade_analysis.R  load_initdeg12_ints.R  load_initdeg12_ints_noisy.R  load_initdeg12_ints_ratchet.R  load_initdeg12_ultrafine_ints.R  load_main_ints.R  sbsc analyses.R  uniform_noise_utility_analysis.R
apps/: CMakeLists.txt  basic_ints.c  initdeg12_ints.c  initdeg12_ints_noisy.c  initdeg12_ints_v2.c  initdeg12_ints_v2_ratchet.c  initdeg12_ints_v2_ultrafine.c  main_ints.c  main_ints_v2.c
data/initdeg12_ints/: initdeg12_ints_sample0.csv  initdeg12_ints_sample0_gen0.graphml  initdeg12_ints_sample0_gen1000.graphml  initdeg12_ints_sample0_gen1500.graphml  initdeg12_ints_sample0_gen2000.graphml  initdeg12_ints_sample0_gen2500.graphml  initdeg12_ints_sample0_gen3000.graphml  initdeg12_ints_sample0_gen3500.graphml  initdeg12_ints_sample0_gen4000.graphml  initdeg12_ints_sample0_gen4500.graphml  initdeg12_ints_sample0_gen500.graphml  initdeg12_ints_sample0_gen5000.graphml  initdeg12_ints_sample1.csv  initdeg12_ints_sample10.csv  initdeg12_ints_sample100.csv  initdeg12_ints_sample100_gen0.graphml  initdeg12_ints_sample100_gen1000.graphml  initdeg12_ints_sample100_gen1500.graphml  initdeg12_ints_sample100_gen2000.graphml  initdeg12_ints_sample100_gen2500.graphml  initdeg12_ints_sample100_gen3000.graphml  initdeg12_ints_sample100_gen3500.graphml  initdeg12_ints_sample100_gen4000.graphml  (+3535 more)
include/sbsc/: sbsc.h
src/: CMakeLists.txt  sbsc.c
(+36298 files in other folders)
